CAMEL-17438: camel-kubernetes - Fix warnings and deprecations